--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 what a great job</li>
         <li> I am currently a Software Development Apprentice.</li> 
          <li>I am very excited to design different pages and to be an advanced  
-             Software Developer.</li> 
+             Software Developer....</li> 
             
             
      </ul>
